# ComfyUI_Auto_Caption

./: README.md  __init__.py  auto_caption.py  auto_caption2.py  pyproject.toml
.github/workflows/: publish.yml
workflow/: README.md  auto caption 2 workflow.json  auto_caption2.py  autocaption1-workflow.json  autocaption2workflow.json
workflow/lib/: ximg.py
