[project]
name = "comfyui_auto_caption"
description = "Load images in order(All other nodes are in the wrong order)! Using LLM and Joy tag pipeline to tag your image(s folder), it's suitable for train FLUX LoRA and also sdxl."
version = "1.0.1"
license = {file = "LICENSE"}
dependencies = ["huggingface_hub==0.24.3", "accelerate", "#torch", "transformers>=4.43.3", "sentencepiece", "bitsandbytes>=0.43.3", "bitsandbytes-windows>=0.37.5"]

[project.urls]
Repository = "https://github.com/Cyber-BlackCat/ComfyUI_Auto_Caption"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "cyber-blackcat"
DisplayName = "Cyber-BlackCat"
Icon = ""
