[project]
name = "comfyui_auto_caption"
description = "Using LLM and Joy tag pipeline to tag your image(s folder), it's suitable for train FLUX LoRA and also sdxl. Load images in order!"
version = "2.0.0"
license = {file = "LICENSE"}
dependencies = ["huggingface_hub==0.24.3", "accelerate", "#torch", "transformers>=4.43.3", "sentencepiece", "bitsandbytes>=0.43.3", "bitsandbytes-windows>=0.37.5"]

[project.urls]
Repository = "https://github.com/Cyber-BlackCat/ComfyUI_Auto_Caption"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "cyber-blackcat"
DisplayName = "ComfyUI_Auto_Caption"
Icon = ""
